# redux

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  _config.yml  index.html  index.md  params.json
doc/: search-index.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/redux/bitio/: trait.BitRead.js  trait.ByteWrite.js
doc/redux/: enum.Error.html  fn.compress.html  fn.decompress.html  index.html  sidebar-items.js  type.Result.html
doc/redux/bitio/: BitRead.t.html  BitReader.t.html  BitWrite.t.html  BitWriter.t.html  ByteCount.t.html  index.html  sidebar-items.js  struct.BitReader.html  struct.BitWriter.html  trait.BitRead.html  trait.BitWrite.html  trait.ByteCount.html  trait.ByteRead.html  trait.ByteWrite.html
doc/redux/codec/: index.html  sidebar-items.js  struct.Codec.html
doc/redux/model/: AdaptiveLinearModel.t.html  index.html  sidebar-items.js  struct.AdaptiveLinearModel.html  struct.AdaptiveTreeModel.html  struct.Parameters.html  trait.Model.html
doc/redux/model/adaptive_linear/: sidebar-items.js  struct.AdaptiveLinearModel.html
doc/redux/model/adaptive_tree/: AdaptiveTreeModel.t.html  sidebar-items.js  (+1 more)
doc/src/redux/: codec.rs.html  lib.rs.html
src/: bitio.rs  codec.rs  lib.rs  main.rs  redox.rs  redux.rs
src/bitio/: mod.rs  tests.rs
src/model/: adaptive_linear.rs  adaptive_tree.rs  mod.rs  tests.rs
src/redux/: bitio.rs  buffer.rs  codec.rs  mod.rs
src/redux/model/: adaptive_linear.rs  mod.rs
tests/: benchmark.rs  corpora.rs  model.rs
(+10 files in other folders)
