[package]
name = "redux"
version = "0.3.0"
authors = ["Péter Budai <buc@peterbudai.eu>"]
description = "Adaptive arithmetic compression library written in Rust"
keywords = ["compression", "arithmetic", "coding", "adaptive"]
homepage = "https://peterbudai.github.io/redux/"
documentation = "https://peterbudai.github.io/redux/doc/redux/"
repository = "https://github.com/peterbudai/redux/"
readme = "README.md"
license = "MIT"

[[bin]]
name = "redux"
doc = false

[dev-dependencies]
time = "0.1"
rand = "0.3"

